--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -115,8 +115,8 @@ span {
   display: block;
 }
 
-#sentinel {
+/* #sentinel {
   width: 150px;
   height: 50px;
   border: 2px solid tomato;
-}
+} */
